--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 cachetools==4.2.1
-google-auth==2.31.0
-google-auth-oauthlib==0.4.2
-gspread==3.7.0
+google-auth==2.3.3
+google-auth-oauthlib==0.4.6
+gspread==5.3.2
 oauthlib==3.1.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 requests-oauthlib==1.3.0
 rsa==4.7.2
+six==1.16.0
